# rsm

./: Cargo.toml  plan.txt
src/: main.rs
src/storage/: in_memory_storage.rs  mod.rs  repository.rs
src/sys_info/: mod.rs
src/websocket/: mod.rs
src/websocket/comm/: mod.rs
src/websocket/node/: comm_sender.rs  mod.rs
src/websocket/server/: comm_receiver.rs  mod.rs
ui/: package-lock.json
ui/lib/: main.dart
ui/src/: index.tsx
ui/src/network/: websocket.ts
ui/src/pages/root/: App.module.css  App.tsx
