[package]
name = "rsm"
version = "0.1.0"
edition = "2018"

[dependencies]
heim = { version = "0.1.0-beta.3", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"
tokio-tungstenite = "*"
futures-channel = "0.3.17"
futures-util = "0.3.17"
rusqlite = { version = "0.26.1", features = ["bundled"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"